--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\Antonio\Flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Antonio\Documents\Development\Faculdade\mobile\gym_log
+FLUTTER_ROOT=C:\Users\Antonio Victor\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\Antonio Victor\Documents\Development\faculdade\mobile\gym_log
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
