--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Antonio Victor\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\Antonio Victor\\flutter
+sdk.dir=C:\\Users\\pesso\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\pesso\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
