--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,10 +24,10 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.gym_log"
+        applicationId = "com.gymlog.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
@@ -42,6 +42,7 @@ android {
     }
 }
 
+apply plugin: 'com.google.gms.google-services'
 flutter {
     source = "../.."
 }
