--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_auth: ^5.2.1
   firebase_core: ^3.4.1
+  sqflite: ^2.3.3
 
 dev_dependencies:
   rename_app: ^1.6.1
