--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^6.1.2
   flutter_svg: ^1.0.0
   sizer: ^3.0.3
+  device_preview: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
