--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.2.1
   firebase_core: ^3.4.1
   sqflite: ^2.3.3
+  sizer: ^3.0.3
 
 dev_dependencies:
   rename_app: ^1.6.1
